--- a/src/app/jurado/jurado-detail/jurado-detail.component.css
+++ b/src/app/jurado/jurado-detail/jurado-detail.component.css
@@ -1,98 +1,44 @@
 html *{
     -webkit-font-smoothing: antialiased;
-}
-
-.h6, h6 {
-    font-size: .75rem !important;
-    font-weight: 500;
-    font-family: Roboto,Helvetica,Arial,sans-serif;
-    line-height: 1.5em;
-    text-transform: uppercase;
-}
-
-.name h6 {
+  }
+  
+  
+  
+  .name h6 {
     margin-top: 10px;
     margin-bottom: 10px;
-}
-
-.navbar {
-    border: 0;
-    border-radius: 3px;
-    padding: .625rem 0;
-    margin-bottom: 20px;
-    color: #555;
-    background-color: #fff!important;
-    box-shadow: 0 4px 18px 0 rgba(0,0,0,.12), 0 7px 10px -5px rgba(0,0,0,.15) !important;
-    z-index: 1000 !important;
-    transition: all 150ms ease 0s;
-    
-}
-
-.navbar.navbar-transparent {
-    z-index: 1030;
-    background-color: transparent!important;
-    box-shadow: none !important;
-    padding-top: 25px;
-    color: #fff;
-}
-
-.navbar .navbar-brand {
-    position: relative;
-    color: inherit;
-    height: 50px;
-    font-size: 1.125rem;
-    line-height: 30px;
-    padding: .625rem 0;
-    font-weight: 300;
-    -webkit-font-smoothing: antialiased;
-}
-
-.navbar .navbar-nav .nav-item .nav-link:not(.btn) .material-icons {
+  }
+  
+  
+  
+  
+  
+  
+  .navbar .navbar-nav .nav-item .nav-link:not(.btn) .material-irs {
     margin-top: -7px;
     top: 3px;
     position: relative;
-    margin-right: 3px;
-}
-
-.navbar .navbar-nav .nav-item .nav-link .material-icons {
-    font-size: 1.25rem;
-    max-width: 24px;
-    margin-top: -1.1em;
-}
-
-.navbar .navbar-nav .nav-item .nav-link .fa, .navbar .navbar-nav .nav-item .nav-link .material-icons {
-    font-size: 1.25rem;
-    max-width: 24px;
-    margin-top: -1.1em;
-}
-
-.navbar .navbar-nav .nav-item .nav-link {
-    position: relative;
-    color: inherit;
-    padding: .9375rem;
-    font-weight: 400;
-    font-size: 12px;
-    border-radius: 3px;
-    line-height: 20px;
-}
-
-a .material-icons {
+  }
+  
+  
+  
+  a .material-icons {
     vertical-align: middle;
-}
-
-.fixed-top {
+  }
+  
+  .fixed-top {
     position: fixed;
     z-index: 1030;
     left: 0;
     right: 0;
-}
-
-.profile-page .page-header {
+  }
+  
+  .profile-page .page-header {
     height: 380px;
     background-position:center;
-}
-
-.page-header {
+  }
+  
+  .page-header {
     height: 100vh;
     background-size: cover;
     margin: 0;
@@ -100,209 +46,194 @@ a .material-icons {
     border: 0;
     display: flex;
     align-items: center;
-}
-
-.header-filter:after, .header-filter:before {
-    position: absolute;
-    z-index: 1;
-    width: 100%;
-    height: 100%;
-    display: block;
-    left: 0;
-    top: 0;
-    content: "";
-}
-
-.header-filter::before {
-    background: rgba(0,0,0,.5);
-}
-
-.main-raised {
-    margin: -60px 30px 0;
-    border-radius: 6px;
-    box-shadow: 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12), 0 8px 10px -5px rgba(0,0,0,.2);
-}
-
-.main {
-    background: #FFF;
-    position: relative;
-    z-index: 3;
-}
-
-.profile-page .profile {
-    text-align: center;
-}
-
-.profile-page .profile img {
-    max-width: 160px;
-    width: 100%;
-    margin: 0 auto;
-    -webkit-transform: translate3d(0,-50%,0);
-    -moz-transform: translate3d(0,-50%,0);
-    -o-transform: translate3d(0,-50%,0);
-    -ms-transform: translate3d(0,-50%,0);
-    transform: translate3d(0,-50%,0);
-}
-
-.img-raised {
-    box-shadow: 0 5px 15px -8px rgba(0,0,0,.24), 0 8px 10px -5px rgba(0,0,0,.2);
-}
-
-.rounded-circle {
-    border-radius: 50%!important;
-}
-
-.img-fluid, .img-thumbnail {
-    max-width: 100%;
-    height: auto;
-}
-
-.title {
-    margin-top: 30px;
-    margin-bottom: 25px;
+  }
+  
+  pofile-page .header-filter{
+    margin-top: 100px;
     min-height: 32px;
     color: #3C4858;
     font-weight: 700;
-    font-family: "Roboto Slab","Times New Roman",serif;
-}
-
-.profile-page .description {
+  }
+  
+  .main-raised {
+    margin: -60px 30px 0;
+    border-radius: 6px;
+    box-shadow: 0 16px 24px 2px rgba(0,0,0,.14), 0 6px 30px 5px rgba(0,0,0,.12), 0 8px 10px -5px rgba(0,0,0,.2);
+  }
+  
+  .main {
+    background: #FFF;
+    position: relative;
+    z-index: 3;
+  }
+  
+  .iman{
+    position: relative;
+    margin-right: 100px;
+  }
+  .profile-page .profile {
+    text-align: center;
+  }
+  
+  .profile-page .profile img {
+    width:200px;
+      height:200px;
+    margin: 0 auto;
+    float: right;
+    border-radius:600px;
+    
+    margin-top: 80px;
+  }
+  .na p{
+    text-align: center;
+  }
+  
+  .img-raised {
+    box-shadow: 0 5px 15px -8px rgba(0,0,0,.24), 0 8px 10px -5px rgba(0,0,0,.2);
+  }
+  
+  .rounded-circle {
+    border-radius: 50%!important;
+  }
+  
+  .img-fluid, .img-thumbnail {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  .title1{
+    text-align: center;
+    color: rgb(255, 255, 255);
+    font-size: 100px;
+  }
+  
+  .title {
+    margin-top: 100px;
+    min-height: 32px;
+    color: #3C4858;
+    font-weight: 700;
+  
+  }
+  
+  .profile-page .description {
     margin: 1.071rem auto 0;
     max-width: 600px;
     color: #999;
     font-weight: 300;
-}
-
-p {
+  }
+  
+  p {
     font-size: 14px;
     margin: 0 0 10px;
-}
-
-.profile-page .profile-tabs {
-    margin-top: 4.284rem;
-}
-
-.nav-pills, .nav-tabs {
+  }
+  
+  
+  
+  .nav-pills, .nav-tabs {
     border: 0;
     border-radius: 3px;
     padding: 0 15px;
-}
-
-.nav .nav-item {
+  }
+  
+  .nav .nav-item {
     position: relative;
     margin: 0 2px;
-}
-
-.nav-pills.nav-pills-icons .nav-item .nav-link {
+  }
+  
+  .nav-pills.nav-pills-icons .nav-item .nav-link {
     border-radius: 4px;
-}
-
-.nav-pills .nav-item .nav-link.active {
+  }
+  
+  .nav-pills .nav-item .nav-link.active {
     color: #fff;
     background-color: #9c27b0;
     box-shadow: 0 5px 20px 0 rgba(0,0,0,.2), 0 13px 24px -11px rgba(156,39,176,.6);
-}
-
-.nav-pills .nav-item .nav-link {
+  }
+  
+  .nav-pills .nav-item .nav-link {
     line-height: 24px;
     font-size: 12px;
     font-weight: 500;
     min-width: 100px;
     color: #555;
-    transition: all .3s;
     border-radius: 30px;
     padding: 10px 15px;
     text-align: center;
-}
-
-.nav-pills .nav-item .nav-link:not(.active):hover {
-    background-color: rgba(200,200,200,.2);
-}
-
-
-.nav-pills .nav-item i {
-    display: block;
-    font-size: 30px;
-    padding: 15px 0;
-}
-
-.tab-space {
+  }
+  
+  .conatiner {
+    position: -webkit-sticky;
+  }
+  
+  .box {
+      margin: 10px;
+      width: 300px;
+      height: 400px;
+      text-align: center;
+      border-radius: 3px;
+      -webkit-transition: 200ms ease-in-out;
+      -o-transition: 200ms ease-in-out;
+      transition: 200ms ease-in-out;
+      -webkit-box-shadow: 0 0 15px rgba(0,0,0,0.3);
+              box-shadow: 0 0 15px rgba(0,0,0,0.3);
+  }
+  .box:hover {
+      margin-bottom: -10px;
+      -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.7);
+              box-shadow: 0 0 5px rgba(0,0,0,0.7);
+  }
+  .box h1 {
+      color: #fff;
+      padding: 30px;
+      margin-top: 100px;
+      text-align: center;
+      font-weight: 100;
+      font-size: 25px;
+      background: rgba(0,0,0,0.8);
+      -webkit-box-shadow: 0 0 30px rgba(0,0,0,0.7);
+              box-shadow: 0 0 30px rgba(0,0,0,0.8);
+  }
+  
+  .nav-pills .nav-item i {
+    font-size: 20px;
+   
+  }
+  
+  .tab-space {
     padding: 20px 0 50px;
-}
-
-.profile-page .gallery {
+  }
+  
+  .profile-page .gallery {
     margin-top: 3.213rem;
     padding-bottom: 50px;
-}
-
-.profile-page .gallery img {
+    align-content: center;
+    float: right;
+  }
+  
+  .profile-page .gallery img {
     width: 100%;
     margin-bottom: 2.142rem;
-}
-
-.profile-page .profile .name{
+  }
+  
+  .profile-page .profile .name{
     margin-top: -80px;
-}
-
-img.rounded {
+  }
+  
+  img.rounded {
     border-radius: 6px!important;
-}
-
-.tab-content>.active {
+  }
+  
+  .tab-content>.active {
     display: block;
-}
-
-/*buttons*/
-.btn {
-    position: relative;
-    padding: 12px 30px;
-    margin: .3125rem 1px;
-    font-size: .75rem;
-    font-weight: 400;
-    line-height: 1.428571;
-    text-decoration: none;
-    text-transform: uppercase;
-    letter-spacing: 0;
-    border: 0;
-    border-radius: .2rem;
-    outline: 0;
-    transition: box-shadow .2s cubic-bezier(.4,0,1,1),background-color .2s cubic-bezier(.4,0,.2,1);
-    will-change: box-shadow,transform;
-}
-
-.btn.btn-just-icon {
-    font-size: 20px;
-    height: 41px;
-    min-width: 41px;
-    width: 41px;
-    padding: 0;
-    overflow: hidden;
-    position: relative;
-    line-height: 41px;
-}
-
-.btn.btn-just-icon fa{
-    margin-top: 0;
-    position: absolute;
-    width: 100%;
-    transform: none;
-    left: 0;
-    top: 0;
-    height: 100%;
-    line-height: 41px;
-    font-size: 20px;
-}
-.btn.btn-link{
-    background-color: transparent;
-    color: #999;
-}
-
-/* dropdown */
-
-
-
-
-.dropdown-menu {
+  }
+  
+  
+  /* dropdown */
+  
+  
+  
+  
+  .dropdown-menu {
     position: absolute;
     top: 100%;
     left: 0;
@@ -317,29 +248,46 @@ img.rounded {
     background-clip: padding-box;
     border-radius: .25rem;
     transition: transform .3s cubic-bezier(.4,0,.2,1),opacity .2s cubic-bezier(.4,0,.2,1);
-}
-
-.dropdown-menu.show{
+  }
+  
+  .dropdown-menu.show{
     transition: transform .3s cubic-bezier(.4,0,.2,1),opacity .2s cubic-bezier(.4,0,.2,1);
-}
-
-
-.dropdown-menu .dropdown-item:focus, .dropdown-menu .dropdown-item:hover, .dropdown-menu a:active, .dropdown-menu a:focus, .dropdown-menu a:hover {
+  }
+  
+  
+  .dropdown-menu .dropdown-item:focus, .dropdown-menu .dropdown-item:hover, .dropdown-menu a:active, .dropdown-menu a:focus, .dropdown-menu a:hover {
     box-shadow: 0 4px 20px 0 rgba(0,0,0,.14), 0 7px 10px -5px rgba(156,39,176,.4);
     background-color: #9c27b0;
     color: #FFF;
-}
-.show .dropdown-toggle:after {
+  }
+  .show .dropdown-toggle:after {
     transform: rotate(180deg);
-}
-
-.dropdown-toggle:after {
+  }
+  
+  .dropdown-toggle:after {
     will-change: transform;
     transition: transform .15s linear;
-}
-
-
-.dropdown-menu .dropdown-item, .dropdown-menu li>a {
+  }
+  
+  .wrap {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: row;
+              flex-direction: row;
+  }
+  
+  .dropdown-menu .dropdown-item, .dropdown-menu li>a {
     position: relative;
     width: auto;
     display: flex;
@@ -359,13 +307,11 @@ img.rounded {
     line-height: 1.428571;
     text-overflow: ellipsis;
     word-wrap: break-word;
-}
-
-.dropdown-menu.dropdown-with-icons .dropdown-item {
-    padding: .75rem 1.25rem .75rem .75rem;
-}
-
-.dropdown-menu.dropdown-with-icons .dropdown-item .material-icons {
+  }
+  
+  
+  
+  .dropdown-menu.dropdown-with-icons .dropdown-item .material-icons {
     vertical-align: middle;
     font-size: 24px;
     position: relative;
@@ -373,29 +319,29 @@ img.rounded {
     top: 1px;
     margin-right: 12px;
     opacity: .5;
-}
-
-/* footer */
-
-footer{
+  }
+  
+  /* footer */
+  
+  footer{
     margin-top: 10px;
     color: #555;
     padding: 25px;
     font-weight: 300;
     
-}
-.footer p{
+  }
+  .footer p{
     margin-bottom: 0;
     font-size: 14px;
     margin: 0 0 10px;
     font-weight: 300;
-}
-footer p a{
+  }
+  footer p a{
     color: #555;
     font-weight: 400;
-}
-
-footer p a:hover {
+  }
+  
+  footer p a:hover {
     color: #9f26aa;
     text-decoration: none;
-}
+  }
