--- a/src/app/cliente/cliente-forma-de-pago/cliente-forma-de-pago.component.html
+++ b/src/app/cliente/cliente-forma-de-pago/cliente-forma-de-pago.component.html
@@ -36,7 +36,7 @@
               <p class="card_numer">{{fdp.numeroTarjeta}}</p>
               <div class="card__space-75">
                 <span class="card__label">Card holder</span>
-                <p class="card__info">John Doe</p>
+                <p class="card__info">{{fdp.nombre}}</p>
               </div>
               <div class="card__space-25">
                 <span class="card__label">Expires</span>
