--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "../node_modules/ngx-toastr/toastr.css";
+
+.modal-backdrop {
+    /* bug fix - no overlay */    
+    display: none;    
+}
+
+.modal {
+    background: rgba(0,0,0,0.5);
+  }
