--- a/src/app/forma-de-pago/forma-de-pago-create/forma-de-pago-create.component.html
+++ b/src/app/forma-de-pago/forma-de-pago-create/forma-de-pago-create.component.html
@@ -15,6 +15,15 @@
   
         </div>
 
+        <div class="form-group">
+            <label for="nombre">Nombre del titular</label>
+            <input type="text" name="nombre" class="form-control" id="nombre"  placeholder="Nombre" [(ngModel)]="formaDePago.nombre"
+                    #numeroVerificacion="ngModel" [ngClass]="{ 'is-invalid': f.submitted && nombre.invalid }" required>
+                     <div class="invalid-feedback">
+                    <div>No se ingreso nombre del titular</div>
+                    </div>
+    
+          </div>
 
         <div class="form-group">
           <label for="numeroTarjeta">Numero de verificacion</label>
