--- a/src/app/interes-fotografico/interes-fotografico-edit/interes-fotografico-edit.component.html
+++ b/src/app/interes-fotografico/interes-fotografico-edit/interes-fotografico-edit.component.html
@@ -30,7 +30,7 @@
     <div class="col-12">
         <div class="row form-inline justify-content-center align-self-center">
         
-            <button class="btn btn-primary" style="padding-right: 3em; background: rgb(127, 161, 255)" (click)="editInteresFotografico()"routerLink="/interesFotograficos/{{interesFotografico_id}"> <span class="fa fa-check "></span> &nbsp; Guardar</button>
+            <button class="btn btn-primary" style="padding-right: 3em; background: rgb(127, 161, 255)" (click)="editInteresFotografico()"> <span class="fa fa-check "></span> &nbsp; Guardar</button>
             &nbsp;
           
             <button  class="btn btn-primary" style="padding-right: 3em; background: rgb(250, 84, 84)" (click)="cancelEdition()"> <span class="fa fa-ban"></span> Cancelar</button>
