Se actualizan las cosas

--- a/src/app/cliente/cliente-delete/cliente-delete.component.html
+++ b/src/app/cliente/cliente-delete/cliente-delete.component.html
@@ -1,5 +1,9 @@
+<style>
+    @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+    </style>
+
 <div class = "container-fluid">
-<div class="modal modal-backdrop" tabindex="-1" role="dialog" id="myModal" aria-labelledby = "deleteModalLabel" aria-hidden="true">
+<div class="modal fade" tabindex="-1" role="dialog" id="myModal" aria-labelledby = "deleteModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
