--- a/src/app/forma-de-pago/forma-de-pago-delete/forma-de-pago-delete.component.html
+++ b/src/app/forma-de-pago/forma-de-pago-delete/forma-de-pago-delete.component.html
@@ -1,5 +1,7 @@
-
-<div class="modal" tabindex="-1" role="dialog" id="myModal" aria-labelledby = "deleteModalLabel" aria-hidden="true">
+<style>
+    @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+    </style>
+<div class="modal fade" tabindex="-1" role="dialog" id="myModal" aria-labelledby = "deleteModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -12,7 +14,7 @@
           <p>¿Esta seguro que desea eliminar la forma de pago con numero <b>{{formaDePagoDetail.numero}}</b> ?</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger" (click)="deleteFormaDePago(formaDePagoDetail)">Eliminar</button>
+          <button type="button" class="btn btn-danger" (click)="deleteFormaDePago(formaDePagoDetail)" data-dismiss="modal">Eliminar</button>
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
         </div>
       </div>
