--- a/src/app/forma-de-pago/forma-de-pago-edit/forma-de-pago-edit.component.html
+++ b/src/app/forma-de-pago/forma-de-pago-edit/forma-de-pago-edit.component.html
@@ -1,4 +1,7 @@
-<div class="row">
+<style>
+    @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+    </style>
+<div class="row justify-content-center">
   <div >
       <br>
       <h2 class="text-center">Editar Forma De Pago</h2>
