--- a/src/app/cliente/cliente-edit/cliente-edit.component.html
+++ b/src/app/cliente/cliente-edit/cliente-edit.component.html
@@ -1,3 +1,7 @@
+<style>
+    @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+    </style>
+
 <div >
     <div class="col-6">
         <br>
