--- a/src/app/cliente/cliente-factura/cliente-factura.component.html
+++ b/src/app/cliente/cliente-factura/cliente-factura.component.html
@@ -1,3 +1,7 @@
+<style>
+    @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+    </style>
+
 <div class = "container-fluid">
     <p>
   
