--- a/src/app/cliente/cliente-list/cliente-list.component.html
+++ b/src/app/cliente/cliente-list/cliente-list.component.html
@@ -1,3 +1,6 @@
+<style>
+    @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+    </style>
 <div class="row">
     <div class="container-fluid col-3">
         <br>
@@ -34,6 +37,8 @@
           </table>
     
     </div>
+    
+
     
     <div class="container-fluid col-9">
       <div *ngIf="clienteDetail">
