--- a/src/app/forma-de-pago/forma-de-pago-create/forma-de-pago-create.component.html
+++ b/src/app/forma-de-pago/forma-de-pago-create/forma-de-pago-create.component.html
@@ -1,3 +1,6 @@
+<style>
+    @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+    </style>
 <div class="row">
   <div class="col-3"></div>
   <div class="col-6">
