--- a/src/app/forma-de-pago/forma-de-pago-detail/forma-de-pago-detail.component.html
+++ b/src/app/forma-de-pago/forma-de-pago-detail/forma-de-pago-detail.component.html
@@ -1,19 +1,35 @@
-<div class ="align-self-center">
-<a class="align-self-center" (click)="showHideEdit(formaDePagoDetail.id)">
-    <i class="material-icons icon-blue" style = "cursor: pointer">create</i>
-</a>
+<style>
+  @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+</style>
+<div class="container-fluid">
+  <br>
+  
+  <div class="row">
+      <div class="col-12">
+        <div class="row form-inline justify-content-center align-self-center">
+          <button type="button" class="btn btn-outline-primary" (click)="showHideEdit(formaDePagoDetail.id)">
+            <i class="material-icons icon-blue" style="cursor: pointer">create</i> {{formaDePagoDetail.numeroTarjeta}}
+          </button>
+          &nbsp;
+          &nbsp;
+          <button type="button" class="btn btn-outline-danger" (click)="deleteFormaDePago()" data-toggle="modal"
+            data-target="#myModal">
+            <i class="material-icons icon-red" style="cursor:pointer"> delete </i> {{formaDePagoDetail.numeroTarjeta}}
+          </button>
+        </div>
+      </div>
+    </div>
 
-&nbsp;
-
-<a (click)="deleteFormaDePago()" data-toggle="modal" data-target="#myModal"> 
-    <i class="material-icons icon-red" style = "cursor:pointer"> delete </i>
-  </a>
     <div class="col-md-8">
-        <div *ngIf="showEdit">
-          <app-forma-de-pago-edit [formaDePagoId]="formaDePagoId" [clienteId]="clienteId" (cancel)="showHideEdit(formaDePagoId)" (update)="updateFormaDePago()"></app-forma-de-pago-edit></div>
+      <div *ngIf="showEdit" justify-content-center>
+        <app-forma-de-pago-edit [formaDePagoId]="formaDePagoId" [clienteId]="clienteId"
+          (cancel)="showHideEdit(formaDePagoId)" (update)="updateFormaDePago()"></app-forma-de-pago-edit>
+      </div>
     </div>
 
     <div *ngIf="showDelete">
-        <app-forma-de-pago-delete [formaDePagoDetail]="formaDePagoDetail"></app-forma-de-pago-delete>
+      <app-forma-de-pago-delete [formaDePagoDetail]="formaDePagoDetail"></app-forma-de-pago-delete>
     </div>
-  </div>
+  
+</div>
+
