--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,7 +77,7 @@
     <footer class="footer bg-light" id="footer">
         <div class="container">
             <p class="navbar-text text-center">
-                <img class="img-fluid" src="../assets/logo.png" width='20%' height='20%'> >
+                <img class="img-fluid" src="../assets/logo.png" width='20%' height='20%'>
             </p>
         </div>
     </footer>
