--- a/src/app/fotografo/fotografo-detail/fotografo-detail.component.css
+++ b/src/app/fotografo/fotografo-detail/fotografo-detail.component.css
@@ -10,7 +10,21 @@ html *{
 }
 
 
+.butt {
+   border: 1px outset blue;
+   background-color: lightBlue;
+   font-size: 700%;
+   height:400px;
+   width:350px;
+   opacity: 0.4;
+   cursor:pointer;
+   transition: 1s;
+}
 
+.butt:hover {
+   background-color: blue;
+   color:white;
+}
 
 
 
