--- a/src/app/fotografo/fotografo-detail/fotografo-detail.component.html
+++ b/src/app/fotografo/fotografo-detail/fotografo-detail.component.html
@@ -8,130 +8,133 @@
 
 
 <body class="profile-page">
-  
 
-    
+
+
     <div class="page-header header-filter"  style="background-image:url('https://www.blogdelfotografo.com/wp-content/uploads/2015/10/15583603744_33147607c0_k.jpg');">	</div>
-   
+
     <div class="main main-raised">
         <div class="row">
             <div class="col-md-6">
-                          <div class="profile-tabs">
-                           
-                            
-                              <ul class="nav nav-pills nav-pills-icons " role="tablist">
-                              <li class="nav-item">
-                                  <a class="nav-link active" href="#studio" role="tab" data-toggle="tab">
-                                    <i class='fas fa-user'></i>
-                                         Perfil
-                                  </a>
-                              </li>
-                              <li class="nav-item">
-                                
-                                  <a class="nav-link" href="#works" role="tab" data-toggle="tab" (click)="showHideEdit(id)">
-                                    <i class='fas fa-edit'></i>
-                                      Editar perfil
+                <div class="profile-tabs">
 
-                                  </a>
-                              </li>
-  
-                             
-                              <li class="nav-item">
-                                  <a class="nav-link" href="#favorite" role="tab" data-toggle="tab" onclick="return confirm ('¿Estas seguro que desea eliminar este perfil?')" (click) = "delete()" routerLink="/fotografos/list">
-                                    <i class='fas fa-trash'></i>
-                                      Eliminar perfil
-                                  </a>
-                              </li>
-                            </ul>
-                          </div>
-              </div>
-              <div class="col-sm-3">.</div>
-              <div class="col-sm-3">.</div>
-              </div>
-		<div class="profile-content">
-          
-                <div class="row">
-	                <div class="col-sm-3">
+
+                    <ul class="nav nav-pills nav-pills-icons " role="tablist">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#studio" role="tab" data-toggle="tab">
+                                <i class='fas fa-user'></i>
+                                Perfil
+                            </a>
+                        </li>
+                        <li class="nav-item">
+
+                            <a class="nav-link" href="#works" role="tab" data-toggle="tab" (click)="showHideEdit(id)">
+                                <i class='fas fa-edit'></i>
+                                Editar perfil
+
+                            </a>
+                        </li>
+
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="#favorite" role="tab" data-toggle="tab" onclick="return confirm ('¿Estas seguro que desea eliminar este perfil?')" (click) = "delete()" routerLink="/fotografos/list">
+                                <i class='fas fa-trash'></i>
+                                Eliminar perfil
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-sm-3">.</div>
+            <div class="col-sm-3">.</div>
+        </div>
+        <div class="profile-content">
+
+            <div class="row">
+                <div class="col-sm-3">
 
                     <div class="profile">
-	                    <div class="avatar">
-	                      <img src="{{fotografoDetail.foto}}">
-                      </div>
-                      </div>
+                        <div class="avatar">
+                            <img src="{{fotografoDetail.foto}}">
+                        </div>
                     </div>
-                        <div class="col-sm-8">
-	                        <div class="name">
-	                            <h3 class="title">{{fotografoDetail.nombre}} {{fotografoDetail.apellido}}</h3>
-                <h6>@{{fotografoDetail.login}}</h6>
-                <p>{{fotografoDetail.descrip}}. Tengo {{fotografoDetail.edad}} años  y mis hobbies son {{fotografoDetail.hobbies}} </p>
-               <div class = "row">
-                 <div class ="col-sm-3">
-                    <i class="fas fa-envelope"></i> {{fotografoDetail.correo}} <br>
-               </div>
-               <div class ="col-sm-3">
-                  <i class="fas fa-map-marker-alt"></i> {{fotografoDetail.pais}} <br>
-              </div>
-              <div class ="col-sm-3">
-                  <i class="fas fa-birthday-cake"></i> {{fotografoDetail.fechaNacimiento}} <br>
-              </div>
-              
-              
-               </div>
-              </div>
-              
-	                        </div>
-                          
-                      
-    	            
-               
-
-				
-        
-          <div class="tab-content tab-space" >
-            <div  class="tab-pane active text-center gallery" id="studio"  >
-                <div class="conatiner iman">
-                    <div class="wrap">
-             
-                <div class="box one" *ngFor = "let photo of fotografoDetail.fotos" [ngStyle]="{'background-image':' url(' + photo.rutaFoto+ ')'}" routerLink="/photos/{{photo.id}}">
-                  <style>
-                      .one {
-                  background-size: cover;
-                  background-position: center;
-                }
-                    </style> 
-                  </div>
-             </div>
-            </div> 
-            
-  			</div>
-            <div class="tab-pane text-center gallery" id="works">
-               
-      		<div class = "row"*ngIf="showEdit">
-              
-              <div class="col-sm-2">
-               .
-                  </div>
-                  <div class="col-sm-2">
-                      .
-                         </div>
-              
+                </div>
                 <div class="col-sm-8">
-      			     <app-fotografo-edit [fotografo_id]="id" (cancel)="showHideEdit(id)" (update)="updateFotografo()"  (update)=" getFotografoDetail()"></app-fotografo-edit>
-               
-                 </div>
-            </div>
-  			</div>
-            <div class="tab-pane text-center gallery" id="favorite">
-      			<div class="row">
-      				
-      			</div>
-      		</div>
-          </div>
+                    <div class="name">
+                        <h3 class="title">{{fotografoDetail.nombre}} {{fotografoDetail.apellido}}</h3>
+                        <h6>@{{fotografoDetail.login}}</h6>
+                        <p>{{fotografoDetail.descrip}}. Tengo {{fotografoDetail.edad}} años  y mis hobbies son {{fotografoDetail.hobbies}} </p>
+                        <div class = "row">
+                            <div class ="col-sm-3">
+                                <i class="fas fa-envelope"></i> {{fotografoDetail.correo}} <br>
+                            </div>
+                            <div class ="col-sm-3">
+                                <i class="fas fa-map-marker-alt"></i> {{fotografoDetail.pais}} <br>
+                            </div>
+                            <div class ="col-sm-3">
+                                <i class="fas fa-birthday-cake"></i> {{fotografoDetail.fechaNacimiento}} <br>
+                            </div>
 
-        
+
+                        </div>
+                    </div>
+
+                </div>
+
+
+
+
+
+
+
+                <div class="tab-content tab-space" >
+                    <div  class="tab-pane active text-center gallery" id="studio"  >
+                        <div class="conatiner iman">
+                            <div class="wrap">
+
+                                <div class="box one" *ngFor = "let photo of fotografoDetail.fotos" [ngStyle]="{'background-image':' url(' + photo.rutaFoto+ ')'}" routerLink="/photos/{{photo.id}}">
+                                <style>
+                                    .one {
+                                background-size: cover;
+                                background-position: center;
+                              }
+                                    </style> 
+                                </div>
+                                <button class ="butt" (click)="showAddPhoto()">+</button>
+
+                            </div>
+                        </div> 
+
+                    </div>
+                    <div class="tab-pane text-center gallery" id="works">
+
+                        <div class = "row"*ngIf="showEdit">
+
+                            <div class="col-sm-2">
+                                .
+                            </div>
+                            <div class="col-sm-2">
+                                .
+                            </div>
+
+                            <div class="col-sm-8">
+                                <app-fotografo-edit [fotografo_id]="id" (cancel)="showHideEdit(id)" (update)="updateFotografo()"  (update)=" getFotografoDetail()"></app-fotografo-edit>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane text-center gallery" id="favorite">
+                        <div class="row">
+
+                        </div>
+                    </div>
+                </div>
+                <app-photo-create (create)="addPhoto($event)" (cancel)="showAddPhoto()" *ngIf="showAddFoto"></app-photo-create>
+
+
             </div>
         </div>
-	</div>
-	
+    </div>
+
 
 </body>
