--- a/src/app/factura/factura-list/factura-list.component.html
+++ b/src/app/factura/factura-list/factura-list.component.html
@@ -1,4 +1,4 @@
-<div class="pin-layout">
+<div class="pin-layout" *ngxPermissionsOnly="['ADMIN']">
     <div class="thumbnail">
         <br>
         <div class="row justify-content-center align-self-center">
@@ -8,43 +8,76 @@
         <br>
         <div class="col-md-8">
             <div *ngIf="showCreate">
-                <app-factura-create (cancel)="showHideCreate()" (create)="ngOnInit()" *ngIf="showCreate"></app-factura-create>
+                <app-factura-create (cancel)="showHideCreate()" (create)="ngOnInit()" *ngIf="showCreate">
+                </app-factura-create>
             </div>
         </div>
         <br>
-      <style>
-        table, th, td{
-          width:100%; 
-          border: 1px solid black;
-          border-collapse: collapse;
-          align-self: center;
-        }
-        th, td {
-          padding: 15px;
-          background-color:rgb(247, 247, 247);
-        }
-      </style>
-      <table >
-          <thead>
-              <tr>
-                  <th style="background-color:rgba(164, 210, 255, 0.877); text-align: center" class="caption">Factura</th>    
-              </tr>
-          </thead>
-        <tbody>
-          <tr *ngFor = "let factura of facturas">
-              <td style="cursor: pointer;"> 
-                  <dd style="text-align: center;" routerLink="/facturas/{{factura.id}}" >{{factura.numero}}</dd>
-              </td>
-              <td>
-                  <button class="btn btn-primary" (click)="showHideEdit(factura.id)"><span class="fa fa-pencil"></span></button>
-              </td>
-          </tr>
-      </tbody>
-    </table>
-    <div class="col-md-8">
-        <div *ngIf="showEdit">
-            <app-factura-edit [factura_id]="factura_edit_id" (cancel)="showHideEdit(factura_edit_id)" (update)="updateFactura()"></app-factura-edit>
+        <style>
+            table,
+            th,
+            td {
+                width: 100%;
+                border: 1px solid black;
+                border-collapse: collapse;
+                align-self: center;
+            }
+
+            th,
+            td {
+                padding: 15px;
+                background-color: rgb(247, 247, 247);
+            }
+        </style>
+        <table>
+            <thead>
+                <tr>
+                    <th style="background-color:rgba(164, 210, 255, 0.877); text-align: center" class="caption">Factura
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let factura of facturas">
+                    <td style="cursor: pointer;">
+                        <dd style="text-align: center;" routerLink="/facturas/{{factura.id}}">{{factura.numero}}</dd>
+                    </td>
+                    <td>
+                        <button class="btn btn-primary" (click)="showHideEdit(factura.id)"><span
+                                class="fa fa-pencil"></span></button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <div class="col-md-8">
+            <div *ngIf="showEdit">
+                <app-factura-edit [factura_id]="factura_edit_id" (cancel)="showHideEdit(factura_edit_id)"
+                    (update)="updateFactura()"></app-factura-edit>
+            </div>
         </div>
     </div>
+</div>
+
+
+<div class="prueb">
+    <div class="conatiner">
+        <div class="wrap">
+            <div class="box one" *ngFor="let factura of facturas"
+                [ngStyle]="{'background-image':' url(https://www.grupovadillo.com/wp-content/uploads/2018/03/contenido-factura.jpg)'}"
+                routerLink="/facturas/{{factura.id}}">
+                <style>
+                    .one {
+                        background-size: cover;
+                        background-position: center;
+                    }
+                </style>
+                <div class="date">
+                </div>
+                <h1>{{factura.numero}}</h1>
+            </div>
+
+
+
+        </div>
     </div>
+
 </div>
